# ai-agent

./: .env.example  README-restructured.md  README.md  docker-compose.yml  package-lock.json  package.json  sample.config.toml
backend/: BACKEND_UPDATES.md  Dockerfile  main.py  pyproject.toml
backend/app/api/: chat.py  chats.py  config.py  models.py  search.py  suggestions.py  uploads.py
backend/app/core/: config.py  database.py
backend/app/models/: chat.py
backend/app/services/llm/: __init__.py  providers.py
backend/app/services/search/: agents.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/settings/: page.tsx
frontend/src/components/: EmptyChat.tsx  Sidebar.tsx
frontend/src/lib/: actions.ts  api.ts
src/app/: layout.tsx  manifest.ts  page.tsx
src/app/all-agents/: README.md  layout.tsx  page.tsx
src/app/settings/: page.tsx
src/components/: Chat.tsx  ChatWindow.tsx  EmptyChat.tsx  MessageBox.tsx  MessageInput.tsx  Sidebar.tsx
src/components/MessageInputActions/: Focus.tsx  Optimization.tsx
src/components/theme/: Switcher.tsx
src/components/ui/: alert.tsx  button.tsx  card.tsx  index.ts  input.tsx  label.tsx  test-components.tsx
src/lib/: config.ts
src/lib/chains/: limeSurveyAgent.ts
src/lib/db/: migrate.js
src/lib/hooks/: useChat.tsx
src/lib/postgres/: db.ts  limeSurvey.ts
src/lib/prompts/: agentGuide.ts  agentSFC.ts  agentSurvey.ts  agentSurvey2.ts  index.ts
src/lib/providers/: index.ts
src/lib/search/: index.ts  metaSearchAgent.ts
src/lib/utils/: chatHelper.ts  splitSurvey.ts
(+4 files in other folders)
